# ping-champions

./: .gitattributes  .gitignore  00_READ_ME_FIRST.md  00_TBD_SETUP.md  ANALISE_FEATURES_REFATORACAO.md  ARCHITECTURE_REVIEW.md  BACKEND_RUN_GUIDE.md  COMMIT_CONVENTIONS.md  CONCLUSAO_SESSAO_15.md  CONCLUSAO_SPRINT1.md  DASHBOARD_FINAL.md  DIAGRAMAS_TECNICOS.md  DOCUMENTACAO.md  E2E_TESTING_SUMMARY.md  E2E_TESTS_RESULTS.md  E2E_TEST_DASHBOARD.md  E2E_TEST_PLAN.md  ENV_TEMPLATE.md  EXEMPLO_CASO_DE_USO.md  FEATURE_2_FRONTEND_INTEGRACAO.md  FEATURE_2_RESUMO.txt  FEATURE_2_USUARIOS.md  GETTING_STARTED.md  GITHUB_SETUP_COMPLETE.md  GUIA_DISCUSSAO_FEATURES.md  GUIA_REINICIALIZACAO.md  I18N_ARCHITECTURE_DIAGRAMS.md  I18N_COMPLETE_ROADMAP.md  I18N_CONFIG.md  I18N_IMPLEMENTATION_GUIDE.md  I18N_IMPLEMENTATION_SUMMARY.md  I18N_OPTIMIZATION_OPTIONS.md  I18N_TOGGLE_GUIDE.md  I18N_TOGGLE_IMPLEMENTADO.md  IMPLEMENTACAO_SPRINT2_MEMBERSHIP.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INDICE_DOCUMENTOS.md  LEIA-ME-PRIMEIRO.txt  PLAYWRIGHT_FIXES.md  (+52 more)
backend/: .flake8  .gitignore  README.md  alembic.ini  apply_collate.py  check_events.py  check_schema.py  config.py  create_test_data.py  create_test_users.py  database.py  elo.py  i18n.py  main.py  populate_test_data.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  schemas.py  test_elo_unit.py  test_matches_query.py  test_output.txt
backend/migrations/: env.py
backend/models/: __init__.py  event.py  match.py  membership.py  player.py  tournament.py  translation.py  user.py
backend/routers/: __init__.py  events.py  i18n.py  (+7 more)
(+185 files in other folders)
